# Engraf

./: .gitignore  LICENSE  MULTI_AXIS_ROTATION_SUMMARY.md  README.md  TRANSFORM_INTERPRETER_ENHANCEMENT.md  VISUALIZER_MIGRATION_SUMMARY.md  debug_empty_scene.py  debug_layer2_tokenization.py  debug_layer3_tokenization.py  debug_layer4_pp_consumption.py  debug_layer4_pp_consumption_fixed.py  debug_make_bigger.py  debug_modifier.py  debug_object_modifier.py  debug_object_resolution.py  debug_parsing.py  debug_progressive.py  debug_pronoun_assembly.py  debug_pronoun_resolution.py  debug_scale.py  debug_scale_update.py  debug_success_flag.py  debug_vector_structure.py  demo_enhanced_transform.py  demo_multi_axis_rotation.py  demo_sentence_interpreter.py  demo_vpython_3d.py  pyproject.toml  simple_rotation_test.py  test_adjective_scaling_bug.py  test_color_conflict.py  test_complex_sentence.py  test_conj_display.py  test_debug_resolution.py  test_demo_full.py  test_dynamic_attribute_elimination.py  test_ellipsoid.py  test_ellipsoid_vpython.py  test_enhanced_matching.py  test_full_demo_scaling.py  (+17 more)
tests/: test_adverb_adjective_sequences.py  test_comparative_superlative.py  test_complex_sentence.py  test_conjunctions.py  test_dissertation.py  test_grammatical_features.py  test_latn_lexical_layer.py  test_multi_axis_rotation.py  test_noun_inflector.py  test_np.py  test_np_enhanced_grammar.py  test_object_movement.py  test_partitive_constructions.py  test_pp.py  test_proper_noun.py  test_quoted_string_forms.py  test_scene_object_phrase.py  test_scenes.py  test_semantic_agreement.py  (+7 more)
(+217 files in other folders)
